src/test/ui/regions/regions-early-bound-error.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/regions-early-bound-error.rs:19:5
   |
LL |     g1.get()
   |     ^^^^^^^^
   |
note: ...the reference is valid for the lifetime 'b as defined on the function body at 18:11...
  --> $DIR/regions-early-bound-error.rs:18:11
   |
LL | fn get<'a,'b,G:GetRef<'a, isize>>(g1: G, b: &'b isize) -> &'b isize {
   |           ^^
note: ...but the borrowed content is only valid for the lifetime 'a as defined on the function body at 18:8
  --> $DIR/regions-early-bound-error.rs:18:8
   |
LL | fn get<'a,'b,G:GetRef<'a, isize>>(g1: G, b: &'b isize) -> &'b isize {
   |        ^^

error: aborting due to previous error

